# libfast

./: .gitmodules  CMakeLists.txt  README.md
include/fast/: constants.hpp  fast.hpp  loader.hpp  sha2.hpp  sha256.hpp  utils.hpp
include/fast/arch/loader/: Windows.hpp
modules/: libfast-config-version.cmake.in  libfast-config.cmake.in
tests/: CMakeLists.txt  fast.cpp  fast_tests.cpp
